--- a/kadry/src/main/webapp/kalendarz/sub/kalendarz_firmy.xhtml
+++ b/kadry/src/main/webapp/kalendarz/sub/kalendarz_firmy.xhtml
@@ -43,14 +43,16 @@
                 </h:form>
                 <h:form id="KalendarzwzorCopyForm"  styleClass="firmakalendarz">
                     <p:outputPanel rendered="#{wpisView.uzer.login eq '2'}">
-                        <p:commandButton value="generuj z globalnego" styleClass="buttonnorm" actionListener="#{kalendarzwzorView.globalnie}" update="akordeon:KalendarzwzormiesiacSaRokForm"/>
+                        <p:commandButton value="generuj z globalnego" styleClass="buttonnorm" actionListener="#{kalendarzwzorView.globalnie(wpisView.firma)}"
+                                         update="akordeon:KalendarzwzormiesiacSaRokForm"/>
                     </p:outputPanel>
                 </h:form>
-                <h:form id="KalendarzwzorCopyFormTMP" styleClass="firmakalendarz">
+<!--                <h:form id="KalendarzwzorCopyFormTMP" styleClass="firmakalendarz">
                     <p:outputPanel rendered="#{wpisView.uzer.login eq '2'}">
-                        <p:commandButton value="taxman na globalny" styleClass="buttonnorm" actionListener="#{kalendarzwzorView.taxmannaglobalnie}" update="akordeon:KalendarzwzormiesiacSaRokForm"/>
+                        <p:commandButton value="taxman na globalny" styleClass="buttonnorm" actionListener="#{kalendarzwzorView.taxmannaglobalnie}"
+update="akordeon:KalendarzwzormiesiacSaRokForm"/>
                     </p:outputPanel>
-                </h:form>
+                </h:form>-->
             </p:panelGrid>
         </p:outputPanel>
         <p:outputPanel>
