--- a/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
+++ b/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
@@ -29,7 +29,7 @@
                         <p:outputLabel value="drugie imię" for="drugieimie" />
                         <p:inputText id="drugieimie" value="#{pracownikDane2View.selected.drugieimie}" title=" drugie imię"/>
                         <p:outputLabel value="pesel" for="pesel" />
-                        <p:inputText id="pesel" value="#{pracownikDane2View.selected.pesel}" title="imię" required="true" requiredMessage="Wpisz Pesel" maxlength="11"/>
+                        <p:inputText id="pesel" value="#{pracownikDane2View.selected.pesel}" title="pesel" required="true" requiredMessage="Wpisz Pesel" maxlength="11"/>
                         <p:outputLabel value="data urodzenia" for="du" />
                         <p:inputMask id="du" value="#{pracownikDane2View.selected.dataurodzenia}" mask="9999-99-99" immediate="true"
                                      title="data urodzenia" required="true" requiredMessage="Wpisz datę urodzenia" validatorMessage="Błędna data urodzenia pracownika">
@@ -37,6 +37,8 @@
                         </p:inputMask>
                         <p:outputLabel value="miejsce urodzenia" for="mu" />
                         <p:inputText id="mu" value="#{pracownikDane2View.selected.miejsceurodzenia}" title="miejsce urodzenia" />
+                         <p:outputLabel value="niemiecki id" for="niemieckiid" />
+                        <p:inputText id="niemieckiid" value="#{pracownikDane2View.selected.niemieckipesel}" title="miemiecki id" required="false" requiredMessage="Wpisz Pesel" maxlength="11"/>
                         <p:outputLabel value="nierezydent" for="rez" />
                         <p:selectBooleanCheckbox id="rez" value="#{pracownikDane2View.selected.nierezydent}" title="czy pracownik jest nierezydentem"/>
                      </p:panelGrid>
