--- a/kadry/src/main/webapp/pit/sub/karty.xhtml
+++ b/kadry/src/main/webapp/pit/sub/karty.xhtml
@@ -137,14 +137,14 @@
                         </f:facet>
                         <h:outputText  value="&#x2714;" rendered="#{itemkarta.kosztywieleumow}" styleClass="ww"/>
                     </p:column>
-                    <p:column width="30" style="text-align: center;">
+<!--                    <p:column width="30" style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="przekr."/>
                         </f:facet>
                         <p:selectBooleanCheckbox id="przekroczenie" value="#{itemkarta.przekroczeniedni}">
                             <p:ajax event="change" partialSubmit="true"/>
                         </p:selectBooleanCheckbox>
-                    </p:column>
+                    </p:column>-->
                     <p:column width="30" style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="PIT-11"/>
