korekta listy plac o podatek niemiecki po przekroczeniu czesc pierwsza

--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -51,6 +51,7 @@
                                 <p:menuitem icon="pi pi-bars" value="lista rach. um. zleceń" style="width: 150px" onclick="PF('dialoglistarachunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="definicja listy" style="width: 150px" onclick="PF('dialoglistadefinicja').show()" async="true"/>
                                 <p:menuitem icon="pi pi-money-bill" value="lista płac" style="width: 150px" onclick="PF('dialoglistaplac').show()" async="true"/>
+                                <p:menuitem icon="pi pi-book" value="niemcy - korekta listy" style="width: 150px" onclick="PF('dialoglistaplackorekta').show()" async="true"/>
                                 <p:menuitem icon="pi pi-eye" value="lista płac analiza" style="width: 150px" onclick="PF('dialoglistaplacanaliza').show()" async="true"/>
                                 <p:menuitem icon="pi pi-table" value="karta wynagrodzeń" style="width: 150px" onclick="PF('dialogkartawynagrodzen').show()" async="true"/>
                                 <p:menuitem icon="pi pi-globe" value="komornik" style="width: 150px" onclick="PF('dialogkomornik').show()" async="true"/>
@@ -240,6 +241,7 @@
                 <ui:include src="sub/dialog/dialog_czaspracy_zagranica.xhtml"/>
                 <ui:include src="sub/dialog/dialog_lista_definicja.xhtml"/>
                 <ui:include src="sub/dialog/dialog_lista_plac.xhtml"/>
+                <ui:include src="sub/dialog/dialog_lista_plac_korekta.xhtml"/>
                 <ui:include src="sub/dialog/dialog_lista_plac_analiza.xhtml"/>
                 <ui:include src="sub/dialog/dialog_dra.xhtml"/>
                 <ui:include src="sub/dialog/dialog_karta_wynagrodzen.xhtml"/>
