--- a/kadry/src/main/webapp/pit/sub/karty.xhtml
+++ b/kadry/src/main/webapp/pit/sub/karty.xhtml
@@ -53,7 +53,7 @@
                         <f:facet name="header">
                             <h:outputText value="US"/>
                         </f:facet>
-                        <h:outputText  value="&#x2714;" rendered="#{itemkarta.angaz.pracownik.kodurzeduskarbowego ne null}" style="color: green;"/>
+                        <h:outputText  value="!!" rendered="#{itemkarta.angaz.pracownik.kodurzeduskarbowego eq null}" style="color: red;font-weight: 900;"/>
                     </p:column>
                     <p:column width="30" style="text-align: center;" >
                         <f:facet name="header">
